# pg-schema-sync

./: .env.development.example  .gitignore  AGENTS.ko.md  AGENTS.md  MIGRATION_GUIDE.ko.md  MIGRATION_GUIDE.md  PARALLEL_MIGRATION_GUIDE.md  README.ko.md  README.md  SKILLS.ko.md  SKILLS.md  SNAPSHOT_GUIDE.md  SPEC.ko.md  SPEC.md  SupabaseDB1ToGCP.example.yaml  SupabaseDB1ToLocal.example.yaml  SupabaseDB2ToGCP.example.yaml  SupabaseDB2ToLocal.example.yaml  check_connections.py  cleanup_payment_connections.py  compare_snapshots.py  config.example.yaml  config_menu.yaml  config_payment.yaml  kill_idle_transactions.py  kill_others.sh  kill_zombie_connections.py  migrate_clean.sh  migrate_menu.sh  migrate_payment.sh  migrate_single_table.py  migrate_stepwise.py  pyproject.toml  requirements.txt  snapshot_row_counts.py  testing.ko.md  testing.md  validate_fks.sql
docs/changelog/: 20250513_changelog.ko.md
docs/logs/: 20250513_cline_work_log.ko.md
docs/spec/: TEMPLATE.ko.md  TEMPLATE.md
mcp_server/: index.py  requirements.txt
src/pg_schema_sync/: __main__.py  dataMig.py
tests/: test_compare_enums.py  test_compare_functions.py  test_compare_indexes.py  test_compare_tables.py  test_compare_views.py  test_smoke_live.py  test_unit_mocking_config.py  test_unit_mocking_data_mig.py
